# Projeto-Streamlit

./: Cadastro.py  README.md  clientes.csv  pyproject.toml
