[tool.poetry]
name = "projeto-pratico"
version = "0.1.0"
description = "Meu primeiro no Streamlit"
authors = ["Tatiana"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = ">=1.49.0,<2.0.0"
pandas = ">=2.3.2,<3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"